--- a/yeibook/templates/index.html
+++ b/yeibook/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block head %}
-    <meta name="Keywords" content="公益，公益赠书，公益赠书平台，社交，赠书，公益，读书会，阅读">
-    <meta name="Description" content="公益赠书，图书赠书，叶书公益">
+{#    <meta name="Keywords" content="公益赠书平台，公益，赠书，读书会，阅读，图书社交">#}
+{#    <meta name="Description" content="公益赠书，图书赠书，叶书公益">#}
     {{ super() }}
     <link rel="stylesheet" href="{{ url_for('static', filename='fnd/css/index.css') }}">
 {% endblock %}
