--- a/yeibook/templates/base.html
+++ b/yeibook/templates/base.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="referrer" content="no-referrer">
-    <title>叶书--赠书于人 手留余香</title>
+    <meta name="Keywords" content="公益赠书，公益，赠书，读书会，阅读，图书社交">
+    <meta name="Description" content="公益赠书平台，图书赠书，叶书公益">
+    <title>叶书-公益赠书平台</title>
     {% block head %}
         <link rel="stylesheet" href="{{ url_for('static', filename='fnd/css/bootstrap.min.css') }}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
@@ -33,7 +34,7 @@
     </div>
     <div class="mobile-bottom">
         <div class="left" id="mobile-nav1">
-            <a id="recent-nav-mobile" href="{{ url_for('web.index') }}" class="active badge">最近赠书</a>
+            <a id="recent-nav-mobile" href="{{ url_for('web.index') }}" class="active">最近赠书</a>
             <a id="gifts-nav-mobile" href="{{ url_for('web.my_gifts') }}">我的赠送</a>
             <a id="wishes-nav-mobile" href="{{ url_for('web.my_wish') }}" class="mywish">我的心愿</a>
             <a id="pending-nav-mobile" href="{{ url_for('web.pending') }}">我的飘叶</a>
