--- a/yeibook/templates/base.html
+++ b/yeibook/templates/base.html
@@ -26,7 +26,7 @@
                     {{ form.csrf_token }}
                 {% endif %}
                 <div class="search-box" id="mobile-search-box">
-                    <input type="text" name="q" id="q" class="mobile_q" placeholder="书名/作者/ISBN">
+                    <input type="text" name="q" id="q" class="mobile_q" placeholder="搜索您想赠送的书籍名称/作者/ISBN">
                     <button type="submit" class="search-btn iconfont" id="mobile_search_btn">&#xe623;</button>
                 </div>
             </form>
@@ -81,7 +81,7 @@
                     {{ form.csrf_token }}
                 {% endif %}
                 <div class="search-box mr-5" data-toggle="tooltip" data-placement="left" title="请搜索您要赠送的书籍">
-                    <input type="text" name="q" id="q" class="search" placeholder="书名/作者/ISBN">
+                    <input type="text" name="q" id="q" class="search" placeholder="搜索您想赠送的书籍名称/作者/ISBN">
                     <!-- <button type="submit" class="search-btn">search</button> -->
                     <button type="submit" class="search-btn iconfont" id="pc_search_btn">&#xe623;</button>
                 </div>
