--- a/yeibook/templates/right_menus.html
+++ b/yeibook/templates/right_menus.html
@@ -1,3 +1,14 @@
+<!-- 实时疫情 -->
+<div class="right-menu right-menu-box3">
+    <div class="title text-center mb-2">实时疫情</div>
+    <a href="{{ url_for('web.covid19') }}" target="_blank">
+        <div class="menu-item">
+            <img src="{{ url_for('static', filename='fnd/images/covid.jpg') }}"
+                 class="img-fluid">
+        </div>
+    </a>
+</div>
+<!-- // 实时疫情 -->
 <!-- 赠书者排行 -->
 <div class="right-menu right-menu-box1">
     <div class="title text-center mb-2">赠送排行</div>
